--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "html-to-image": "^1.11.11",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "slate": "^0.103.0",
+    "slate-history": "^0.100.0",
+    "slate-hyperscript": "^0.100.0",
+    "slate-react": "^0.102.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
