--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "sharp": "^0.33.3",
     "slate": "^0.103.0",
     "slate-history": "^0.100.0",
     "slate-hyperscript": "^0.100.0",
